# desktop

./: .gitignore  .npmrc  README.md  forge.config.js  forge.config.ts  local-create.sh  local-remove.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.main.config.ts
.github/workflows/: build-deps.yml  build-linux-appimage.yml  build-linux.yml  build-macos.yml  build-tauri.yml  build-windows-msi.yml  build-windows.yml  build.yml  e2e-macos.yml  e2e-windows.yml  electron.yml  push.yml  release-linux.yml  release-macos.yml  release-tauri.yml  release-windows.yml  release.yml
e2e/: paste-context-menu.spec.ts  wdio.conf.cjs
e2e/tests/: context-menu-paste.spec.cjs
resources/packaging/linux/AppImage/: simple-irc-client.yml
scripts/: smoke-test.js
src/: index.js  preload.cjs  update.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/irc/: commands.rs  mod.rs  state.rs
